cluster/buttertart/instagrapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instagrapi
  labels:
    app: instagrapi
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: instagrapi
  template:
    metadata:
      labels:
        app: instagrapi
    spec:
      containers:
        - name: instagrapi
          image: quay.io/christopherjmiller/instagrapi:latest
          ports:
            - containerPort: 8000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: instagrapi
  labels:
    service: api
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: instagrapi
