cluster/buttertart/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buttertart-redis
  namespace: buttertart
  labels:
    app: buttertart-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buttertart-redis
  template:
    metadata:
      labels:
        app: buttertart-redis
    spec:
      containers:
        - name: buttertart-redis
          image: docker.io/redis:7-alpine@sha256:121bac949fb5f623b9fa0b4e4c9fb358ffd045966e754cfa3eb9963f3af2fe3b
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: buttertart-redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: buttertart-redis
  namespace: buttertart
spec:
  selector:
    app: buttertart-redis
  ports:
    - protocol: TCP
      port: 6379
