cluster/buttertart/ingress-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: backend
  annotations:
    external-dns.alpha.kubernetes.io/target: buttert.art
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api.buttert.art
      secretName: api-buttertart-tls
  rules:
    - host: api.buttert.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
