cluster/buttertart/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    external-dns.alpha.kubernetes.io/target: buttert.art
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - dev.buttert.art
      secretName: buttertart-tls
  rules:
    - host: dev.buttert.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
