cluster/buttertart/minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest@sha256:4232b4bcd98ca205267a016f84064171eec2a4b2e7e98012467463a2129bca21
          command:
            - minio
            - server
            - /data
            - --console-address
            - :9001
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9001
              protocol: TCP
          volumeMounts:
            - name: minio
              mountPath: /data
      volumes:
        - name: minio
          persistentVolumeClaim:
            claimName: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    service: api
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-dashboard
  labels:
    service: api
spec:
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: buttert.art
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - dash.obj.buttert.art
      secretName: dash-obj-buttertart-tls
  rules:
    - host: dash.obj.buttert.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-dashboard
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    external-dns.alpha.kubernetes.io/target: buttert.art
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - obj.buttert.art
      secretName: obj-buttertart-tls
  rules:
    - host: obj.buttert.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
